# fileforge

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
include/fileforge/: rename_rule.h  scanner.h  test_fixture.h
scripts/: generate_fixture.sh  test_sort.sh
src/: main.cpp  rename_rule.cpp  scanner.cpp  test_fixture.cpp
tests/: integration_test.cpp
