cmake_minimum_required(VERSION 3.16)
project(fileforge VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(fileforge
    src/main.cpp
    src/rename_rule.cpp
    src/scanner.cpp
)

target_include_directories(fileforge PRIVATE ${CMAKE_SOURCE_DIR}/include)
